--- a/View/index.html
+++ b/View/index.html
@@ -32,9 +32,12 @@
     </nav>
     <div class="jumbotron" style="padding:40px;">
       <form action="/" method="post">
-        Address:<br>
+        Address del Usuario:<br>
+        <input type="text" id="usuario" name="usuario" value="">
+        <br>
+        Address del Contrato:<br>
         <input type="text" id="address" name="address" value="">
-        <br>-->
+        <br>
         Materia:<br>
         <input type="text" id="materia" name="materia" value="">
         <br>
