--- a/View/index.html
+++ b/View/index.html
@@ -25,24 +25,36 @@
             <a href="/">Solicitar Tutoria</a>
           </li>
           <li>
-            <a href="/getmateria">getMateria( )</a>
+            <a href="/metodos">Metodos</a>
           </li>
         </ul>
       </div>
     </nav>
     <div class="jumbotron" style="padding:40px;">
       <form action="/" method="post">
-        Address del Usuario:<br>
-        <input type="text" id="usuario" name="usuario" value="">
-        <br>
-        Address del Contrato:<br>
-        <input type="text" id="address" name="address" value="">
+        Usuario:<br>
+        <select name="usuario" id="usuario">
+          <option value="0xfd730bab2d10d2179aec947409e2f0c5d1ac5021">Gonza</option>
+          <option value="0x2af24ec65db90aa75fc9c918da71e498c6812efe">Jose</option>
+          <option value="0xb84d66b9aa22c77cb82b756a64dba9e26719b4d7">Cristian</option>
+          <option value="0xbd7b59c5c01e860150200df323b703228625eff7">Sergio</option>
+          <option value="0xcffd857638c1e8e5dcb8df934f6c2d8fd12fea61">Facundo</option>
+          <option value="0xfd8fc5f54264089778fe45d188b1636d9399ce5e">Gonsalo</option>
+          <option value="0xedb0e48927a72e9dc907afd23d9794586acfd149">Leandro</option>
+          <option value="0x95f4c7b52bd3890dd6ab2a488d51414b3b961eca">Martin</option>
+          <option value="0xff7cbcb3bae4b13db50860a023e31f4a0b0bfa46">Agustin</option>
+          <option value="0xbf965026809eeda78bd15e66ed185220fbc44c0b">Sebastian</option>
+        </select>
         <br>
         Materia:<br>
         <input type="text" id="materia" name="materia" value="">
         <br>
         Profesor:<br>
-        <input type="text" id="profesor" name="profesor" value="">
+        <select name="profesor" id="profesor">
+            <option value="0x2af24ec65db90aa75fc9c918da71e498c6812efe">Jose</option>
+            <option value="0xb84d66b9aa22c77cb82b756a64dba9e26719b4d7">Cristian</option>
+            <option value="0xbd7b59c5c01e860150200df323b703228625eff7">Sergio</option>
+          </select>
         <br><br>
         <input type="submit" value="Solicitar">
       </form>
