--- a/View/metodos.html
+++ b/View/metodos.html
@@ -8,7 +8,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body background='descarga.jpeg' style="margin:auto;height:100%;width:100%">
   <div style="margin:100px;">
     <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container">
@@ -30,12 +30,19 @@
         <option value="0x2af24ec65db90aa75fc9c918da71e498c6812efe">Jose</option>
         <option value="0xb84d66b9aa22c77cb82b756a64dba9e26719b4d7">Cristian</option>
         <option value="0xbd7b59c5c01e860150200df323b703228625eff7">Sergio</option>
-        <option value="0xcffd857638c1e8e5dcb8df934f6c2d8fd12fea61">Facundo</option>
+        <option value="0xcffd857638c1e8e5dcb8df934f6c2d8fd12fea61">Mela</option>
         <option value="0xfd8fc5f54264089778fe45d188b1636d9399ce5e">Gonsalo</option>
         <option value="0xedb0e48927a72e9dc907afd23d9794586acfd149">Leandro</option>
         <option value="0x95f4c7b52bd3890dd6ab2a488d51414b3b961eca">Martin</option>
         <option value="0xff7cbcb3bae4b13db50860a023e31f4a0b0bfa46">Agustin</option>
         <option value="0xbf965026809eeda78bd15e66ed185220fbc44c0b">Sebastian</option>
+      </select>
+
+      <select name="profesor" id="profesor">
+        <option value="0x2af24ec65db90aa75fc9c918da71e498c6812efe">Jose</option>
+        <option value="0xb84d66b9aa22c77cb82b756a64dba9e26719b4d7">Cristian</option>
+        <option value="0xbd7b59c5c01e860150200df323b703228625eff7">Sergio</option>
+        <option value="0xbd7b59c5c01e860150200df323b703228625eff7">Mela</option>
       </select>
       <br><br>Metodos:<br>
       <select name="metodo" id="metodo">
