Multiples Tutorias para usuarios.

--- a/View/index.html
+++ b/View/index.html
@@ -25,7 +25,7 @@
             <a href="/">Solicitar Tutoria</a>
           </li>
           <li>
-            <a href="/metodos">Metodos</a>
+            <a href="/tutoria">Tutorias</a>
           </li>
         </ul>
       </div>
